--- a/.github/workflows/docker_build.yaml
+++ b/.github/workflows/docker_build.yaml
@@ -26,7 +26,7 @@ jobs:
       with:
         ref: ${{ github.sha }}
         wait-interval: 30
-        running-workflow-name: 'tests'
+        running-workflow-name: 'selfdrive'
     - name: Stop job from running
       if: ${{ !env.IS_DEFAULT_REPO || !env.IS_MAIN_BRANCH }}
       run: |
