fix(github): make it so wait for selfdrive only runs on pushes

--- a/.github/workflows/selfdrive_tests.yaml
+++ b/.github/workflows/selfdrive_tests.yaml
@@ -252,6 +252,7 @@ jobs:
     name: wait for selfdrive
     runs-on: ubuntu-20.04
     timeout-minutes: 60
+    if: github.event_name = 'push'
     steps:
     - name: Wait For Static Analysis
       uses: lewagon/wait-on-check-action@v0.2
