chore(github): disable webcam workflow

--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -1,12 +1,16 @@
 name: Mac OS
 on:
   push:
+    branches:
+      - 'src'
     branches-ignore:
       - 'testing-closet*'
     paths-ignore:
       - '**.md'
       - 'README*'
   pull_request:
+    branches-ignore:
+      - '*'
     paths-ignore:
       - '**.md'
       - 'README*'
