fix(github): wait for the correct selfdrive result

--- a/.github/workflows/selfdrive_tests.yaml
+++ b/.github/workflows/selfdrive_tests.yaml
@@ -244,45 +244,52 @@ jobs:
     runs-on: ubuntu-20.04
     timeout-minutes: 60
     steps:
+    - name: Setup Env Vars
+      run: |
+        if [[ $GITHUB_EVENT_NAME = 'push' ]]; then
+          echo 'WAIT_REF=${{ github.sha }}' >> $GITHUB_ENV
+        else
+          echo 'WAIT_REF=${{ github.head_ref }}' >> $GITHUB_ENV
+        fi
     - name: Wait For Static Analysis
       uses: lewagon/wait-on-check-action@v0.2
       with:
-        ref: ${{ github.sha }}
+        ref: ${{ env.WAIT_REF }}
         check-name: 'static analysis'
         wait-interval: 60
     - name: Wait For Valgrind
       uses: lewagon/wait-on-check-action@v0.2
       with:
-        ref: ${{ github.sha }}
+        ref: ${{ env.WAIT_REF }}
         check-name: 'valgrind'
         wait-interval: 60
     - name: Wait For Build Release
       uses: lewagon/wait-on-check-action@v0.2
       with:
-        ref: ${{ github.sha }}
+        ref: ${{ env.WAIT_REF }}
         check-name: 'build release'
         wait-interval: 60
     - name: Wait For Unit Tests
       uses: lewagon/wait-on-check-action@v0.2
       with:
-        ref: ${{ github.sha }}
+        ref: ${{ env.WAIT_REF }}
         check-name: 'unit tests'
         wait-interval: 60
     - name: Wait For Car Models Tests
       uses: lewagon/wait-on-check-action@v0.2
       with:
-        ref: ${{ github.sha }}
+        ref: ${{ env.WAIT_REF }}
         check-name: 'car models'
         wait-interval: 60
     - name: Wait For Longitudinal Tests
       uses: lewagon/wait-on-check-action@v0.2
       with:
-        ref: ${{ github.sha }}
+        ref: ${{ env.WAIT_REF }}
         check-name: 'longitudinal'
         wait-interval: 60
     - name: Wait For Process Replay
       uses: lewagon/wait-on-check-action@v0.2
       with:
-        ref: ${{ github.sha }}
+        ref: ${{ env.WAIT_REF }}
         check-name: 'process replay'
         wait-interval: 60
