--- a/.github/workflows/docker_build.yaml
+++ b/.github/workflows/docker_build.yaml
@@ -27,14 +27,11 @@ jobs:
         ref: ${{ github.sha }}
         wait-interval: 60
         check-name: 'wait for selfdrive'
-    - name: Stop job from running
-      if: ${{ !env.IS_DEFAULT_REPO || !env.IS_MAIN_BRANCH }}
-      run: |
-        echo "::error file=docker_build.yaml::Docker images should only be built when pushing to the main branch of the default repo."
-        exit 1
     - name: Build Docker image
+      if: ${{ env.IS_DEFAULT_REPO && env.IS_MAIN_BRANCH }}
       run: eval "$BUILD_CMD"
     - name: Push to container registry
+      if: ${{ env.IS_DEFAULT_REPO && env.IS_MAIN_BRANCH }}
       run: |
         eval "$DOCKER_LOGIN ${{ secrets.PACKAGE_PAT }}"
         docker push ${{ env.BASE_IMAGE }}
