--- a/.github/workflows/selfdrive_tests.yaml
+++ b/.github/workflows/selfdrive_tests.yaml
@@ -94,6 +94,10 @@ jobs:
         ${{ env.RUN_CMD }} "cd /tmp/openpilot && \
                         scons -j$(nproc) && \
                         FILEREADER_CACHE=1 python selfdrive/test/test_valgrind_replay.py"
+    - name: Copy logs
+      if: ${{ env.SHOULD_BUILD_DOCKER }}
+      run: |
+        docker cp ${{ env.TEMP_IMAGE }}:/tmp/openpilot/${{ env.LOG_FILE_PATH }} ${{ env.LOG_FILE_PATH }}
     - name: Print logs
       if: always()
       run: |
@@ -168,6 +172,10 @@ jobs:
                         FILEREADER_CACHE=1 CI=1 coverage run selfdrive/test/process_replay/test_processes.py --local"
     - name: Upload coverage to Codecov
       run: bash <(curl -s https://codecov.io/bash) -v -F process_replay
+    - name: Copy logs
+      if: ${{ env.SHOULD_BUILD_DOCKER }}
+      run: |
+        docker cp ${{ env.TEMP_IMAGE }}:/tmp/openpilot/${{ env.LOG_FILE_PATH }} ${{ env.LOG_FILE_PATH }}
     - name: Print diff
       if: always()
       run: |
@@ -202,6 +210,11 @@ jobs:
                         scons -j$(nproc) && \
                         cd selfdrive/test/longitudinal_maneuvers && \
                         ./test_longitudinal.py"
+    - name: Copy artifacts
+      if: ${{ env.SHOULD_BUILD_DOCKER }}
+      run: |
+        mkdir -p ${{ env.LOG_PATH }}
+        docker cp ${{ env.TEMP_IMAGE }}:/tmp/openpilot/${{ env.LOG_PATH }} ${{ env.LOG_PATH }}
     - uses: actions/upload-artifact@v2
       if: always()
       continue-on-error: true
