hotfix(github): properly make ci release without extra files

--- a/.github/workflows/ci_release.yaml
+++ b/.github/workflows/ci_release.yaml
@@ -12,6 +12,8 @@ jobs:
     name: github ci release
     runs-on: ubuntu-20.04
     timeout-minutes: 90
+    env:
+      TARGET_DIR: tmp_op_ci
     steps:
     - uses: actions/checkout@v2
       with:
